monticore-generator/src/test/resources/cocos/invalid/A4008/A4008a.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4008;

grammar A4008a extends mc.grammars.types.TestTypes {

  interface ArrayType;

}
